fix tag spans wrapping

--- a/src/components/Provider/Provider.css
+++ b/src/components/Provider/Provider.css
@@ -52,6 +52,7 @@
 }
 
 .item-tag {
+    display: inline-block;
     font-size: 0.8em;
     color: var(--dark-purple);
     border: 1.5px solid var(--dark-purple);
